--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,9 @@
     "lint": {
       "outputs": []
     },
+    "test:update": {
+      "outputs": []
+    },
     "test": {
       "dependsOn": ["^build"],
       "outputs": [],
