--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@radix-ui/colors": "^1.0.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
