fix(pnpm): set packageManager in package.jsons

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rocco-web",
   "version": "0.0.0",
+  "packageManager": "pnpm@7.29.1",
   "private": true,
   "scripts": {
     "dev": "vite",
