--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rocco-api",
   "version": "1.0.0",
+  "packageManager": "pnpm@7.29.1",
   "private": true,
   "license": "MIT",
   "scripts": {
