--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/colors": "^1.0.0",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
