--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@headlessui/react": "^1.7.15",
     "@radix-ui/colors": "^1.0.0",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
@@ -35,6 +36,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "ui": "workspace:*",
+    "use-places-autocomplete": "^4.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
