--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "files": [
-    "eslint-preset.js"
+    "eslint-preset.js",
+    "eslint-react.js"
   ],
   "dependencies": {
     "eslint-config-prettier": "^8.3.0",
