--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -51,9 +51,15 @@
     "@typescript-eslint/parser": "^5.12.1",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.13",
-    "config": "workspace:*",
     "eslint": "8.25.0",
     "eslint-config-custom": "workspace:*",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.19",
     "prettier": "^2.5.1",
     "react-test-renderer": "18.0.0",
