--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,9 +8,9 @@
     "lint": "eslint *.ts*"
   },
   "devDependencies": {
+    "@types/prop-types": "^15.7.5",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "config": "workspace:*",
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
     "react": "^18.2.0",
@@ -21,8 +21,9 @@
     "@emotion/styled": "^11.8.1",
     "@radix-ui/colors": "^1.0.0",
     "@radix-ui/react-avatar": "^1.0.3",
-    "@types/prop-types": "^15.7.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "formik": "^2.2.9",
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "react-stately": "^3.24.0"
   }
 }
