--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,9 +24,11 @@
     "@fastify/rate-limit": "6.0.0",
     "@fastify/secure-session": "4.0.0",
     "@prisma/client": "^4.11.0",
+    "@segment/analytics-node": "^1.0.0",
     "@sendgrid/mail": "^7.6.1",
     "@sentry/node": "6.2.5",
     "@sentry/tracing": "6.2.5",
+    "@total-typescript/ts-reset": "^0.4.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.5.8",
     "bcryptjs": "^2.4.3",
