--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -52,6 +52,7 @@
     "autoprefixer": "^10.4.13",
     "eslint": "8.25.0",
     "eslint-config-custom": "workspace:*",
+    "eslint-config-ponti": "workspace:*",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.3",
