--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "turbo:migrate": "turbo run prisma:generate && turbo run prisma:deploy"
   },
   "devDependencies": {
-    "eslint-config-custom": "workspace:*",
+    "eslint-config-ponti": "workspace:*",
     "husky": "^7.0.4",
     "lint-staged": "^12.5.0",
     "prettier": "^2.8.7",
