fix(email): log when emails are sent

--- a/turbo.json
+++ b/turbo.json
@@ -42,6 +42,9 @@
     "ENABLE_REQUEST_LOGGING",
     "NODE_ENV",
     "PORT",
-    "SEGMENT_KEY"
+    "SEGMENT_KEY",
+    "SENDGRID_API_KEY",
+    "SENDGRID_SENDER_EMAIL",
+    "SENDGRID_SENDER_NAME"
   ]
 }
