--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
     "preview": "vite preview",
     "start": "pnpx http-server build --gzip -a 0.0.0.0 -p $PORT -c 1209600",
     "test": "vitest --run",
