--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,7 +27,7 @@
     "@segment/analytics-node": "^1.0.0",
     "@sendgrid/mail": "^7.6.1",
     "@sentry/node": "6.2.5",
-    "@sentry/tracing": "6.2.5",
+    "@sentry/tracing": "^7.60.0",
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.5.8",
