--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -51,7 +51,7 @@
     "ts-node": "10.4.0",
     "ts-node-dev": "1.1.8",
     "tsconfig": "workspace:*",
-    "typescript": "4.5.x"
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": "^16.0.0"
