feat(*): upgrade to Node 20

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,14 +1,13 @@
 {
   "name": "rocco-api",
-  "version": "1.0.0",
-  "packageManager": "pnpm@7.29.1",
+  "version": "0.0.0",
   "private": true,
   "license": "MIT",
   "scripts": {
-    "build": "pnpm clean && prisma generate && tsc",
+    "build": "npm run clean && prisma generate && tsc",
     "clean": "rm -rf build",
-    "dev": "pnpm build && nodemon --config nodemon.json",
-    "lint": "eslint src/**/*.ts",
+    "dev": "npm run build && nodemon --config nodemon.json",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
     "prisma:deploy": "prisma migrate deploy",
     "prisma:dev": "prisma migrate dev",
     "prisma:generate": "prisma generate",
@@ -18,15 +17,17 @@
     "test": "NODE_ENV=test jest"
   },
   "dependencies": {
-    "@fastify/circuit-breaker": "2.0.0",
-    "@fastify/cors": "7.0.0",
-    "@fastify/helmet": "8.0.0",
-    "@fastify/rate-limit": "6.0.0",
-    "@fastify/secure-session": "4.0.0",
+    "@fastify/circuit-breaker": "3.2.0",
+    "@fastify/cookie": "^8.3.0",
+    "@fastify/cors": "^8.3.0",
+    "@fastify/csrf-protection": "^6.3.0",
+    "@fastify/helmet": "^11.0.0",
+    "@fastify/rate-limit": "^8.0.3",
+    "@fastify/secure-session": "^6.1.0",
     "@prisma/client": "^4.11.0",
     "@segment/analytics-node": "^1.0.0",
     "@sendgrid/mail": "^7.6.1",
-    "@sentry/node": "6.2.5",
+    "@sentry/node": "^7.60.1",
     "@sentry/tracing": "^7.60.0",
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/bcryptjs": "^2.4.2",
@@ -34,26 +35,23 @@
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.28.0",
     "dotenv": "8.2.0",
-    "fastify": "3.29.4",
-    "fastify-csrf": "^3.1.0",
-    "fastify-plugin": "^3.0.0",
+    "fastify": "^4.20.0",
+    "fastify-plugin": "^4.5.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
     "pino-pretty": "^7.5.3"
   },
   "devDependencies": {
-    "@tsconfig/node14": "^1.0.1",
+    "@tsconfig/node20": "^20.1.0",
     "@types/jest": "29.5.2",
-    "@types/node": "^14.11.2",
+    "@types/node": "^20.4.5",
+    "eslint-config-ponti": "0.0.0",
     "jest": "29.5.0",
     "prisma": "^4.11.0",
     "ts-jest": "29.1.0",
     "ts-node": "10.4.0",
     "ts-node-dev": "1.1.8",
-    "tsconfig": "workspace:*",
+    "tsconfig": "0.0.0",
     "typescript": "^5.1.6"
-  },
-  "engines": {
-    "node": "^16.0.0"
   }
 }
