--- a/.github/workflows/deploy-api-prod.yaml
+++ b/.github/workflows/deploy-api-prod.yaml
@@ -17,20 +17,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: 🏗️ Set up PNPM
-        uses: pnpm/action-setup@v2.2.1
-        with:
-          version: 7.29.1
-          run_install: true
-
       - name: 🏗️ Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
-          cache: 'pnpm'
+          node-version: '20.5.0'
+
+      - name: Install dependencies
+        run: npm install
 
       - name: Install Railway
-        run: npm i -g @railway/cli
+        run: npm install -g @railway/cli
 
       - name: Deploy
         run: railway up
