--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -4,15 +4,13 @@ LABEL version="0.0.1"
 LABEL name="rocco-web"
 LABEL description="rocco web application"
 LABEL maintainer="Chase Ponti <cj@ponti.io>"
+LABEL vendor="Ponti & Co, LLC"
 
-ENV PNPM_HOME="/root/.local/share/pnpm"
-ENV PATH="${PATH}:${PNPM_HOME}"
-RUN npm install --global pnpm@7.29.1
 RUN apk add --no-cache libc6-compat
 RUN apk update && apk add bash
 
 # Add the Turbo CLI
-RUN pnpm add -g turbo
+RUN npm install -g turbo
 
 # ------------------------------------------------------------------------------
 FROM base AS builder
@@ -31,11 +29,11 @@ WORKDIR /app
 
 # Copy the lockfile, package files, and of the isolated subworkspace
 COPY --from=builder /app/out/json/ /app/
-COPY --from=builder /app/out/pnpm-lock.yaml /app/pnpm-lock.yaml
+COPY --from=builder /app/out/package-lock.json /app/package-lock.json
 COPY --from=builder /app/out/full/ /app/
 
 # Install dependencies
-RUN pnpm install --frozen-lockfile --prefer-frozen-lockfile --ignore-scripts
+RUN npm install --frozen-lockfile --prefer-frozen-lockfile --ignore-scripts
 
 # Set default node environment to production
 ARG NODE_ENV=production
