--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,7 +1,6 @@
 {
   "name": "rocco-web",
   "version": "0.0.0",
-  "packageManager": "pnpm@7.29.1",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -34,13 +33,13 @@
     "react-query": "^3.34.16",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.2.1",
-    "ui": "workspace:*",
+    "ui": "0.0.0",
     "use-places-autocomplete": "^4.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "@types/node": "^17.0.12",
+    "@types/node": "^20.4.5",
     "@types/reach__router": "^1.3.10",
     "@types/react": "18.2.7",
     "@types/react-dom": "^18.2.7",
@@ -50,22 +49,15 @@
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.13",
     "eslint": "8.25.0",
-    "eslint-config-ponti": "workspace:*",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "7.31.8",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-config-ponti": "0.0.0",
     "postcss": "^8.4.19",
     "react-test-renderer": "18.2.0",
     "rollup-plugin-analyzer": "^4.0.0",
     "sass": "^1.49.10",
     "tailwindcss": "^3.2.4",
-    "tsconfig": "workspace:*",
+    "tsconfig": "0.0.0",
     "typescript": "^5.1.6",
-    "ui": "workspace:*",
+    "ui": "0.0.0",
     "vite": "^4.4.7",
     "vitest": "^0.33.0"
   }
