--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -50,7 +50,7 @@
     "prisma": "^4.11.0",
     "ts-jest": "29.1.0",
     "ts-node": "10.4.0",
-    "ts-node-dev": "1.1.8",
+    "ts-node-dev": "^2.0.0",
     "tsconfig": "0.0.0",
     "typescript": "^5.1.6"
   }
