--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,7 +31,7 @@
     "@sentry/tracing": "^7.60.0",
     "@total-typescript/ts-reset": "^0.4.2",
     "date-fns": "^2.28.0",
-    "dotenv": "8.2.0",
+    "dotenv": "^16.3.1",
     "fastify": "^4.21.0",
     "fastify-plugin": "^4.5.1",
     "pino-pretty": "^10.2.0"
