--- a/packages/eslint-config-ponti/package.json
+++ b/packages/eslint-config-ponti/package.json
@@ -23,7 +23,7 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-testing-library": "5.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint": "8.22.0"
+    "eslint": "^8.45.0"
   },
   "devDependencies": {
     "typescript": "^5.1.6"
