--- a/packages/eslint-config-ponti/package.json
+++ b/packages/eslint-config-ponti/package.json
@@ -10,20 +10,20 @@
     "react.js"
   ],
   "dependencies": {
+    "eslint": "^8.45.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-turbo": "latest",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-prefer-function-component": "3.0.0",
-    "eslint-plugin-react": "7.31.8",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-testing-library": "5.6.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint": "^8.45.0"
+    "eslint-plugin-unused-imports": "^2.0.0"
   },
   "devDependencies": {
     "typescript": "^5.1.6"
