--- a/packages/eslint-config-ponti/package.json
+++ b/packages/eslint-config-ponti/package.json
@@ -11,7 +11,7 @@
   ],
   "dependencies": {
     "eslint": "^8.45.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.4.12",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-turbo": "latest",
     "eslint-plugin-cypress": "2.12.1",
