--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,13 +12,13 @@
     "test:update": "vitest -u --run"
   },
   "dependencies": {
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.15",
-    "@radix-ui/colors": "^1.0.0",
+    "@radix-ui/colors": "^1.0.1",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@react-google-maps/api": "^2.18.1",
@@ -38,20 +38,20 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.22.9",
     "@types/node": "^20.4.5",
     "@types/reach__router": "^1.3.10",
-    "@types/react": "18.2.7",
+    "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.22",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.45.0",
     "eslint-config-ponti": "0.0.0",
     "postcss": "^8.4.19",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "^18.2.0",
     "rollup-plugin-analyzer": "^4.0.0",
     "sass": "^1.49.10",
     "tailwindcss": "^3.2.4",
