--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,6 +22,7 @@
     "@fastify/cors": "^8.3.0",
     "@fastify/csrf-protection": "^6.3.0",
     "@fastify/helmet": "^11.0.0",
+    "@fastify/jwt": "^7.2.0",
     "@fastify/rate-limit": "^8.0.3",
     "@fastify/secure-session": "^6.1.0",
     "@prisma/client": "^5.0.0",
