--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -34,7 +34,9 @@
     "dotenv": "^16.3.1",
     "fastify": "^4.21.0",
     "fastify-plugin": "^4.5.1",
-    "pino-pretty": "^10.2.0"
+    "open-graph-scraper": "^6.2.2",
+    "pino-pretty": "^10.2.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.0",
