--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,13 +3,27 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
+    "cy:headless": "cypress run",
+    "cy": "cypress open",
+    "db:migrate:dev": "prisma migrate dev",
+    "dev": "vite",
+    "lint:fix": "eslint --cache --fix --ignore-path ../../.gitignore --ext .ts,.tsx src",
+    "lint:strict": "eslint --max-warnings=0 src",
+    "lint": "eslint --cache --ignore-path ../../.gitignore --ext .js,.jsx,.ts,.tsx src",
+    "postinstall": "cypress install",
+    "preview:test": "start-server-and-test preview http://localhost:4173",
     "preview": "vite preview",
     "start": "npx http-server build --gzip -a 0.0.0.0 -p $PORT -c 1209600",
+    "test:ci": "vitest run",
+    "test:coverage": "pnpx vite preview --outDir coverage/lcov-report",
+    "test:e2e:ci": "npm run preview:test 'npm run cypress run --record'",
+    "test:e2e:headless": "npm run preview:test 'cypress run'",
+    "test:e2e": "npm run preview:test 'cypress open'",
+    "test:update": "vitest run -u",
+    "test:watch": "vitest",
     "test": "vitest --run",
-    "test:update": "vitest -u --run"
+    "typecheck": "tsc --noEmit --incremental false"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -39,26 +53,66 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
+    "@testing-library/cypress": "9.0.0",
+    "@testing-library/react": "14.0.0",
     "@types/node": "^20.4.5",
     "@types/reach__router": "^1.3.10",
-    "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.22",
+    "@types/react": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "@vitejs/plugin-react": "^4.0.3",
+    "@vitest/coverage-v8": "^0.33.0",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.45.0",
+    "cypress": "^12.17.1",
+    "eslint-config-next": "13.4.9",
     "eslint-config-ponti": "0.0.0",
-    "postcss": "^8.4.19",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-cypress": "2.13.3",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-prefer-function-component": "3.1.0",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-testing-library": "5.11.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "eslint": "^8.45.0",
+    "husky": "^8.0.1",
+    "jsdom": "^22.1.0",
+    "lint-staged": "13.2.3",
+    "next-router-mock": "^0.9.7",
+    "postcss-import": "^15.1.0",
+    "postcss": "8.4.25",
+    "prettier-plugin-tailwindcss": "^0.4.0",
+    "prettier": "3.0.0",
+    "prisma": "5.0.0",
     "react-test-renderer": "^18.2.0",
     "rollup-plugin-analyzer": "^4.0.0",
     "sass": "^1.49.10",
-    "tailwindcss": "^3.2.4",
+    "start-server-and-test": "^2.0.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint": "^14.16.1",
+    "tailwindcss": "^3.3.2",
     "tsconfig": "0.0.0",
     "typescript": "^5.1.6",
     "ui": "0.0.0",
     "vite": "^4.4.7",
     "vitest": "^0.33.0"
+  },
+  "lint-staged": {
+    "*.css": "stylelint --cache --fix",
+    "*.{ts,tsx}": [
+      "npm run lint:fix",
+      "vitest related --run --coverage=false"
+    ]
+  },
+  "nyc": {
+    "report-dir": "coverage/cypress",
+    "reporter": [
+      "lcov"
+    ]
   }
 }
