--- a/turbo.json
+++ b/turbo.json
@@ -45,6 +45,8 @@
     "SEGMENT_KEY",
     "SENDGRID_API_KEY",
     "SENDGRID_SENDER_EMAIL",
-    "SENDGRID_SENDER_NAME"
+    "SENDGRID_SENDER_NAME",
+    "VERCEL_URL",
+    "NEXT_PUBLIC_API_URL"
   ]
 }
