refactor(github): simplify workflows

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -1,6 +1,6 @@
 # Inspired by:
 # https://github.com/kentcdodds/kentcdodds.com/blob/main/.github/workflows/deployment.yml
-name: 🧐 Code Quality
+name: 🔍 Code Quality
 on:
   push:
     branches:
@@ -30,7 +30,7 @@ jobs:
         uses: github/codeql-action/analyze@v2
 
   lint:
-    name: ⬣ Lint & ʦ Typecheck
+    name: 🧹 Lint & ʦ Typecheck
     runs-on: ubuntu-latest
     steps:
       - name: 🛑 Cancel Previous Runs
@@ -54,27 +54,56 @@ jobs:
         run: npm run typecheck
 
   test:
-    name: 🃏 Test
+    name: 🧪 Test
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+      
+    strategy:
+      matrix:
+        node-version: [18]
+    
     steps:
       - name: 🛑 Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.9.1
-
+        
       - name: ⬇️ Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: 🏗️ Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "16"
+          node-version: '18'
+          run_install: true
 
-      - name: 📥 Download deps
+      - name: 📦 Install dependencies
         run: npm install
 
-      - name: 🃏 Test
-        run: npm run test
+      #! The tests require the Prisma client to be generated.
+      - name: 🏗️ Generate Prisma client
+        run: npx turbo run prisma:generate
 
-      - name: End-to-End tests
+      - name: 🧪 Unit tests
+        run: npm run test
+        env:
+          APP_URL: ${{ secrets.APP_URL }}}
+          COOKIE_SALT: 9yDzDu8E6JzFbbMK
+          COOKIE_SECRET: f1qnL2ixpbu99pX0LWGoUBBFJZmNhlBMzWGsNF1e3bg=
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/api
+          SENDGRID_API_KEY: SG.1234567890
+
+      - name: 🧪 End-to-End tests
         uses: cypress-io/github-action@v2
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
