--- a/.github/workflows/deploy-api-prod.yaml
+++ b/.github/workflows/deploy-api-prod.yaml
@@ -2,7 +2,7 @@ name: Deploy to Railway
 
 on:
   workflow_run:
-    workflows: ["🧪 Test"]
+    workflows: ["🔍 Code Quality"]
     branches: [main]
     types:
       - completed
