fix(apps/web): improve lint scripts for web

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,9 +8,8 @@
     "cy": "cypress open",
     "db:migrate:dev": "prisma migrate dev",
     "dev": "vite",
-    "lint:fix": "eslint --cache --fix --ignore-path ../../.gitignore --ext .ts,.tsx src",
-    "lint:strict": "eslint --max-warnings=0 src",
-    "lint": "eslint --cache --ignore-path ../../.gitignore --ext .js,.jsx,.ts,.tsx src",
+    "lint:fix": "eslint --cache --fix --ignore-path ../../.gitignore --ext .js,.jsx,.ts,.tsx src",
+    "lint": "eslint --max-warnings=0 --cache --ignore-path ../../.gitignore --ext .js,.jsx,.ts,.tsx src",
     "postinstall": "cypress install",
     "preview:test": "start-server-and-test preview http://localhost:5001",
     "preview": "vite preview",
