--- a/.github/workflows/codeql-lint.yml
+++ b/.github/workflows/codeql-lint.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm install
 
       - name: 🔬 Lint
-        run: npm run lint:strict
+        run: npx turbo run lint
 
       - name: 🔎 Type check
         run: npm run typecheck
