--- a/.github/workflows/codeql-lint.yml
+++ b/.github/workflows/codeql-lint.yml
@@ -30,4 +30,4 @@ jobs:
         run: npx turbo run lint
 
       - name: 🔎 Type check
-        run: npm run typecheck
+        run: npx turbo run typecheck
