fix(github): generate prisma artifacts for lint workflow

--- a/.github/workflows/codeql-lint.yml
+++ b/.github/workflows/codeql-lint.yml
@@ -26,6 +26,9 @@ jobs:
       - name: 📥 Download deps
         run: npm install
 
+      - name: 📥 Generate artifacts
+        run: npx turbo run prisma:generate
+
       - name: 🔬 Lint
         run: npx turbo run lint
 
