--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -31,6 +31,7 @@ jobs:
         env:
           CYPRESS_BASE_URL: ${{ github.event.deployment_status.target_url }}
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
 
       # if you are NOT using Cypress GitHub Integration App, then set commit status manually
       # https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions#job-status-check-functions
@@ -63,6 +64,3 @@ jobs:
             "description": "Cypress tests failed",
             "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           }'
-
-# Required Config
-# Add CYPRESS_RECORD_KEY to github secrets
