--- a/turbo.json
+++ b/turbo.json
@@ -47,6 +47,7 @@
     "COOKIE_NAME",
     "COOKIE_SALT",
     "COOKIE_SECRET",
+    "CYPRESS_PROJECT_ID",
     "ENABLE_REQUEST_LOGGING",
     "NODE_ENV",
     "PORT",
