fix(github/test): test using turbo command instead of cypress

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,17 +59,19 @@ jobs:
           SENDGRID_API_KEY: SG.1234567890
       
       - name: 🧪 End-to-end tests
+        working-directory: ./apps/web
+        run: npx turbo run test:e2e:ci
         # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
-        uses: cypress-io/github-action@v5
-        with:
-          # Starts web server for E2E tests - replace with your own server invocation
-          # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
-          start: npm run dev
-          wait-on: 'http://127.0.0.1:5001' # Waits for above
-          # Records to Cypress Cloud 
-          # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
-          record: true
-          parallel: true # Runs test in parallel using settings above
+        # uses: cypress-io/github-action@v5
+        # with:
+        #   # Starts web server for E2E tests - replace with your own server invocation
+        #   # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
+        #   start: npm run dev
+        #   wait-on: 'http://127.0.0.1:5001' # Waits for above
+        #   # Records to Cypress Cloud 
+        #   # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
+        #   record: true
+        #   parallel: true # Runs test in parallel using settings above
         env:
           # For recording and parallelization to work you must set your CYPRESS_RECORD_KEY
           # in GitHub repo → Settings → Secrets → Actions
