--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,19 +59,21 @@ jobs:
           SENDGRID_API_KEY: SG.1234567890
       
       - name: 🧪 End-to-end tests
-        working-directory: ./apps/web
-        run: npx turbo run test:e2e:ci
         # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
+        uses: cypress-io/github-action@v2
         # uses: cypress-io/github-action@v5
-        # with:
-        #   # Starts web server for E2E tests - replace with your own server invocation
-        #   # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
-        #   start: npm run dev
-        #   wait-on: 'http://127.0.0.1:5001' # Waits for above
-        #   # Records to Cypress Cloud 
-        #   # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
-        #   record: true
-        #   parallel: true # Runs test in parallel using settings above
+        with:
+          build: npm run build
+          # Starts web server for E2E tests - replace with your own server invocation
+          # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
+          # start: npm run dev
+          command: npm run test:e2e:ci
+          # Address to wait for before running tests
+          # wait-on: 'http://localhost:5001' 
+          # Records to Cypress Cloud
+          # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
+          # record: true
+          # parallel: true # Runs test in parallel using settings above
         env:
           # For recording and parallelization to work you must set your CYPRESS_RECORD_KEY
           # in GitHub repo → Settings → Secrets → Actions
@@ -80,12 +82,10 @@ jobs:
           # Creating a token https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
-          NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL }}
-          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
-      
+          
       - name: ⬆️ Upload coverage
         uses: codecov/codecov-action@v3
         with:
           fail_ci_if_error: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
