--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prepush": "npm run test",
     "prerelease": "npm run test",
     "test": "turbo run test",
+    "test:e2e:ci": "turbo run test:e2e:ci --scope rocco-web",
     "test:update": "turbo run test:update --scope rocco-web",
     "turbo:migrate": "turbo run prisma:generate && turbo run prisma:deploy"
   },
