--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,7 +15,7 @@
     "preview": "vite preview",
     "start": "npx http-server build --gzip -a 0.0.0.0 -p $PORT -c 1209600",
     "test:ci": "vitest run",
-    "test:coverage": "pnpx vite preview --outDir coverage/lcov-report",
+    "test:coverage": "npx vite preview --outDir coverage/lcov-report",
     "test:e2e:ci": "npm run preview:test 'npx cypress run --record'",
     "test:e2e:headless": "npm run preview:test 'cypress run'",
     "test:e2e": "npm run preview:test 'cypress open'",
