--- a/.github/workflows/test-deployed.yml
+++ b/.github/workflows/test-deployed.yml
@@ -24,6 +24,19 @@ jobs:
       - name: Checkout 🛎
         uses: actions/checkout@v1
 
+        #! The tests require the Prisma client to be generated.
+      - name: 🏗️ Generate Prisma client
+        run: npx turbo run prisma:generate
+
+      - name: 🧪 Unit tests
+        run: npm run test
+        env:
+          APP_URL: ${{ secrets.APP_URL }}
+          COOKIE_SALT: 9yDzDu8E6JzFbbMK
+          COOKIE_SECRET: f1qnL2ixpbu99pX0LWGoUBBFJZmNhlBMzWGsNF1e3bg=
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/rocco
+          SENDGRID_API_KEY: SG.1234567890
+
       - name: Run Cypress 🌲
         uses: cypress-io/github-action@v2
         with:
