--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,7 +14,8 @@
     "prisma:push": "prisma db push",
     "prisma:reset": "prisma migrate reset",
     "start": "node build/src/index",
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test jest",
+    "typecheck": "tsc --noEmit --incremental false"
   },
   "dependencies": {
     "@fastify/circuit-breaker": "3.2.0",
@@ -24,7 +25,7 @@
     "@fastify/helmet": "^11.0.0",
     "@fastify/rate-limit": "^8.0.3",
     "@fastify/secure-session": "^6.1.0",
-    "@prisma/client": "^5.0.0",
+    "@prisma/client": "^5.1.1",
     "@segment/analytics-node": "^1.0.0",
     "@sendgrid/mail": "^7.6.1",
     "@sentry/node": "^7.60.1",
@@ -34,7 +35,9 @@
     "dotenv": "^16.3.1",
     "fastify": "^4.21.0",
     "fastify-plugin": "^4.5.1",
-    "pino-pretty": "^10.2.0"
+    "open-graph-scraper": "^6.2.2",
+    "pino-pretty": "^10.2.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.0",
@@ -43,7 +46,7 @@
     "eslint-config-ponti": "0.0.0",
     "jest": "29.5.0",
     "nodemon": "^3.0.1",
-    "prisma": "^5.0.0",
+    "prisma": "5.1.1",
     "ts-jest": "29.1.0",
     "ts-node": "10.4.0",
     "tsconfig": "0.0.0",
