feat(ci): switch web deploy to railway

--- a/.github/workflows/deploy-api-prod.yaml
+++ b/.github/workflows/deploy-api-prod.yaml
@@ -1,4 +1,4 @@
-name: 🚀 Deploy API >> production
+name: 🚀 API > Deploy > Prod
 
 on:
   workflow_run:
@@ -29,6 +29,6 @@ jobs:
         run: npm install -g @railway/cli
 
       - name: Deploy
-        run: railway up
+        run: railway up --service ${{ secrets.RAILWAY_SERVICE_API }}
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
