--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -25,7 +25,7 @@
     "expo-router": "2.0.0",
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.4",
-    "expo-status-bar": "^1.6.0",
+    "expo-status-bar": "~1.6.0",
     "expo": "^49.0.0",
     "react-dom": "18.2.0",
     "react-native-gesture-handler": "~2.12.0",
@@ -33,7 +33,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "react-native": "^0.72.3",
+    "react-native": "0.72.6",
     "react": "18.2.0",
     "typescript": "^5.1.3"
   },
