[PON-14] feat: jwt token auth (#8)
* feat(apps/native): ios app v1

* fix(package): update package-lock

* Rename the Signin component to Authenticate

* feat(prisma): rename apiToken to accessToken

* feat(apps/api): set access and refresh token on authenticate

* feat(app/api/auth): return user in authenticate route

* fix(apps/native/auth): correct authenticate redirect

* fix(github): add generic jwt secret for tests

* feat(apps/native): remove EXPO_PUBLIC_API_URL

* feat(apps/native/app): return v1 loading screen

* feat(apps/native/auth): add baseState

* fix(apps/native): fix expo deps versions

* refactor(apps/native): remove native

* feat(apps/api): simplify authorize route

* chore(repo): update package-lock

--- a/turbo.json
+++ b/turbo.json
@@ -49,6 +49,7 @@
     "COOKIE_SECRET",
     "CYPRESS_PROJECT_ID",
     "ENABLE_REQUEST_LOGGING",
+    "JWT_SECRET",
     "NODE_ENV",
     "PORT",
     "SEGMENT_KEY",
