--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -102,7 +102,7 @@
     "vitest": "^0.33.0"
   },
   "lint-staged": {
-    "*.css": "stylelint --cache --fix",
+    "*.css": "stylelint --config ../../.stylelintrc.json --cache --fix",
     "*.{ts,tsx}": [
       "npm run lint:fix",
       "vitest related --run --coverage=false"
