feat(ci): only run web-preview on Code Quality completed

--- a/.github/workflows/deploy-web-preview.yml
+++ b/.github/workflows/deploy-web-preview.yml
@@ -5,6 +5,10 @@ on:
     branches-ignore:
       - main
     paths: ["apps/web/**"]
+  workflow_run:
+    workflows: ["🔍 Code Quality"]
+    types:
+      - completed
 
 jobs:
   Deploy-Preview:
