--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,11 +1,24 @@
 {
-  "extends": "tsconfig/base.json",
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "display": "Default",
   "compilerOptions": {
-    "rootDir": ".",
+    "composite": false,
+    "declaration": true,
+    "declarationMap": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "inlineSources": false,
+    "isolatedModules": true,
+    "moduleResolution": "node",
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "outDir": "build",
-    "sourceMap": true,
+    "preserveWatchOutput": true,
+    "rootDir": ".",
     "skipLibCheck": true,
-    "esModuleInterop": true
+    "sourceMap": true,
+    "strict": true,
   },
-  "include": ["src/**/*.ts", "test/**/*.ts"]
+  "include": ["src/**/*.ts", "test/**/*.ts"],
+  "exclude": ["node_modules"]
 }
