--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,9 +27,6 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.15",
     "@radix-ui/colors": "^1.0.1",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -43,6 +40,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
     "react-query": "^3.34.16",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.2.1",
@@ -56,15 +54,16 @@
     "@testing-library/react": "14.0.0",
     "@types/node": "^20.4.5",
     "@types/reach__router": "^1.3.10",
+    "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.22",
-    "@types/react": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "@vitejs/plugin-react": "^4.0.3",
     "@vitest/coverage-v8": "^0.33.0",
     "autoprefixer": "^10.4.13",
     "cypress": "^12.17.1",
+    "eslint": "^8.45.0",
     "eslint-config-next": "13.4.9",
     "eslint-config-ponti": "0.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -72,28 +71,27 @@
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-prefer-function-component": "3.1.0",
-    "eslint-plugin-react": "7.32.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-testing-library": "5.11.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "eslint": "^8.45.0",
     "husky": "^8.0.1",
     "jsdom": "^22.1.0",
     "lint-staged": "13.2.3",
     "next-router-mock": "^0.9.7",
-    "postcss-import": "^15.1.0",
     "postcss": "8.4.25",
-    "prettier-plugin-tailwindcss": "^0.4.0",
+    "postcss-import": "^15.1.0",
     "prettier": "3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.0",
     "prisma": "5.0.0",
     "react-test-renderer": "^18.2.0",
     "rollup-plugin-analyzer": "^4.0.0",
     "sass": "^1.49.10",
     "start-server-and-test": "^2.0.0",
-    "stylelint-config-prettier": "^9.0.3",
     "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.3",
     "tailwindcss": "^3.3.2",
     "tsconfig": "0.0.0",
     "typescript": "^5.1.6",
