--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,10 +9,10 @@
     "dev": "npm run build && nodemon --config nodemon.json",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
     "prisma:deploy": "prisma migrate deploy",
-    "prisma:dev": "prisma migrate dev",
-    "prisma:generate": "prisma generate",
-    "prisma:push": "prisma db push",
-    "prisma:reset": "prisma migrate reset",
+    "prisma:dev": "npx prisma migrate dev",
+    "prisma:generate": "npx prisma generate",
+    "prisma:push": "npx prisma db push",
+    "prisma:reset": "npx prisma migrate reset",
     "start": "node build/src/index",
     "test": "NODE_ENV=test jest",
     "typecheck": "tsc --noEmit --incremental false"
@@ -46,7 +46,7 @@
     "eslint-config-ponti": "0.0.0",
     "jest": "29.5.0",
     "nodemon": "^3.0.1",
-    "prisma": "^5.7.0",
+    "prisma": "5.7.0",
     "ts-jest": "29.1.0",
     "ts-node": "10.4.0",
     "typescript": "^5.1.6"
