--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.7.2",
+    "@spotlightjs/spotlight": "^1.2.5",
     "axios": "^1.6.2",
     "daisyui": "^3.5.0",
     "formik": "^2.2.9",
@@ -80,6 +81,7 @@
     "husky": "^8.0.1",
     "jsdom": "^22.1.0",
     "lint-staged": "13.2.3",
+    "msw": "^2.0.11",
     "next-router-mock": "^0.9.7",
     "postcss": "8.4.25",
     "postcss-import": "^15.1.0",
