--- a/.github/workflows/deploy-web-prod.yml
+++ b/.github/workflows/deploy-web-prod.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm install -g @railway/cli
 
       - name: Deploy
-        working-directory: apps/web/build
+        working-directory: apps/web
         run: railway up --service ${{ secrets.RAILWAY_SERVICE_WEB }}
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
