feat: use /app in COPY build command

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:alpine
 
 # Copy build artifacts to the nginx directory
-COPY ./build /usr/share/nginx/html
+COPY /app/build /usr/share/nginx/html
 
 # Copy nginx configuration
 COPY nginx.conf /etc/nginx/nginx.conf
