feat: add debug lines to docker file

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,5 +1,11 @@
 FROM nginx:alpine
 
+# Copy application to 
+COPY . /app
+
+# Echo the current working directory's contents
+RUN ls -la /app
+
 # Copy build artifacts to the nginx directory
 COPY /app/build /usr/share/nginx/html
 
