--- a/apps/web/Caddyfile
+++ b/apps/web/Caddyfile
@@ -23,8 +23,8 @@
 	# health check for railway
 	respond /health 200
 
-	# serve from the 'dist' folder (Vite builds into the 'dist' folder)
-	root * dist
+	# serve from the 'dist' folder
+	root * build
 
 	# enable gzipping responses
 	encode gzip
