--- a/apps/web/nixpacks.toml
+++ b/apps/web/nixpacks.toml
@@ -32,6 +32,6 @@ runImage = 'ubuntu:20.04' # use a new ubuntu image to run the caddy server in
 onlyIncludeFiles = [
   'caddy',
   'Caddyfile',
-  'dist',
-] # copy only the needed files and folders into the new image (Vite builds to a 'dist' folder)
+  'build',
+] # copy only the needed files and folders into the new image
 cmd = './caddy run --config Caddyfile --adapter caddyfile 2>&1' # start caddy using the Caddyfile config and caddyfile adapter
