feat: stage one of vercel deploy

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ apps/web/cypress/videos/**
 .eslintcache
 .stylelintcache
 build
+build/assets
 tsconfig.tsbuildinfo
 
 # misc
@@ -38,6 +39,8 @@ yarn-error.log*
 
 # turbo
 .turbo
+.vercel
+
 
 # google
 google-service-account.json
