--- a/.github/workflows/deploy-web-preview.yml
+++ b/.github/workflows/deploy-web-preview.yml
@@ -37,7 +37,7 @@ jobs:
         run: npm install -g @railway/cli
 
       - name: Deploy
-        working-directory: apps/web/build
+        working-directory: apps/web
         run: railway up --service ${{ secrets.RAILWAY_SERVICE_WEB_BETA }}
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
