--- a/apps/web/Caddyfile
+++ b/apps/web/Caddyfile
@@ -33,5 +33,5 @@
 	file_server
 
 	# if path doesn't exist, redirect it to 'index.html' for client side routing
-	try_files {path} /index.html
+	try_files {path} build/index.html
 }
