Add skip install phase to nixpacksPlan

--- a/apps/web/railway.toml
+++ b/apps/web/railway.toml
@@ -1,2 +1,6 @@
 [build]
 nixpacksConfigPath = "nixpacks.toml"
+
+[build.nixpacksPlan.phases.install]
+dependsOn = ["setup"]
+cmds = ["echo 'skipping install'"]
