fix: switch to Docker for apps/web

--- a/apps/web/railway.toml
+++ b/apps/web/railway.toml
@@ -1,7 +1,2 @@
 [build]
-buildCommand = "echo 'skipping build'"
-nixpacksConfigPath = "nixpacks.toml"
-
-[build.nixpacksPlan.phases.install]
-dependsOn = ["setup"]
-cmds = ["echo 'skipping install'"]
+dockerfilePath = "Dockerfile"
