--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -59,6 +59,9 @@ FROM nginx:1.21-alpine
 
 COPY --from=builder /apps/web/build /usr/share/nginx/html
 
+# Use custom nginx config
+COPY nginx.conf /etc/nginx/nginx.conf
+
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
