--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -57,10 +57,11 @@ RUN turbo run build --filter=rocco-web
 # Stage 2: Serve the built app using Nginx
 FROM nginx:1.21-alpine
 
-COPY --from=builder /apps/web/build /usr/share/nginx/html
+# Copy build assets
+COPY --from=builder /app/apps/web/build /usr/share/nginx/html
 
 # Use custom nginx config
-COPY apps/web/nginx.conf /etc/nginx/nginx.conf
+COPY --from=builder /app/apps/web/nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
 
