--- a/apps/web/nginx.conf
+++ b/apps/web/nginx.conf
@@ -1,11 +1,13 @@
-server {
-    listen 80;
-    server_name localhost;
-    root /usr/share/nginx/html;
-    index index.html index.htm;
-    
-    # Pass requests for / to base url /index.html file:
-    location / {
-        try_files $uri $uri/ /index.html;
+http {
+    server {
+        listen 80;
+        server_name localhost;
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        
+        # Pass requests for / to base url /index.html file:
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
     }
 }
