--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,8 +1,8 @@
 FROM node:18 AS base
 
 LABEL version="0.0.1"
-LABEL name="rocco-api"
-LABEL description="rocco core api"
+LABEL name="rocco-web"
+LABEL description="Rocco Web App"
 LABEL maintainer="Chase Ponti <cj@ponti.io>"
 LABEL vendor="Ponti & Co, LLC"
 
