[PON-43] Users can navigate to sub-URLs (#28)
* Update deploy-web-preview.yml and deploy-web-prod.yml

* fix: try use dot to transfer build directory

* feat: use /app in COPY build command

* fix: use apps/web/build as working-directory

* feat: add debug lines to docker file

* feat: bump all checkout actions to v3

* feat: remove Dockerfile and use build dir

* feat: stage one of vercel deploy

* fix: try using build/index.html

* fix: try using build/index.html

* fix: add railway.toml

* Add skip install phase to nixpacksPlan

* Add build command to skip build process

* fix: switch to Docker for apps/web

* fix: remove install and build Dockerfile steps

* feat: use api Docker as base for web Docker

* Remove unnecessary build steps and update deployment process

* Update deploy-web-preview.yml to include the workflow file

* Add custom nginx config

* use Dockerfile.web

* Update Dockerfile path in web-railway.toml

* Update Dockerfile.web to copy build assets and use custom nginx config

* Refactor nginx.conf file to include http block

* Add worker connections configuration to nginx.conf

* Add mime.types to nginx.conf

* Remove unnecessary files and directories

* Update Dockerfile labels for Rocco Web App

* Update deploy-web-prod.yml workflow

--- a/.github/workflows/deploy-web-preview.yml
+++ b/.github/workflows/deploy-web-preview.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches-ignore:
       - main
-    paths: ["apps/web/**"]
+    paths: ["apps/web/**", ".github/workflows/deploy-web-preview.yml"]
   workflow_run:
     workflows: ["🔍 Code Quality"]
     types:
@@ -14,30 +14,17 @@ jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: 🏗 Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "18"
 
-      - name: ⬇️ Install dependencies
-        run: npm install
-
-      - name: 📥 Generate artifacts
-        run: npx turbo run prisma:generate
-
-      - name: 🏗️ Build
-        run: npm run build
-        env:
-          VITE_API_URL: ${{ secrets.VITE_API_URL }}
-          VITE_GOOGLE_API_KEY: ${{ secrets.VITE_GOOGLE_API_KEY }}
-
       - name: Install Railway
         run: npm install -g @railway/cli
 
       - name: Deploy
-        working-directory: apps/web/build
-        run: railway up --service ${{ secrets.RAILWAY_SERVICE_WEB }}
+        run: railway up --service ${{ secrets.RAILWAY_SERVICE_WEB_BETA }}
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
