--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,14 @@ on:
       - main
   pull_request: {}
 
+env:
+  APP_URL: ${{ secrets.APP_URL }}
+  COOKIE_SALT: 9yDzDu8E6JzFbbMK
+  COOKIE_SECRET: f1qnL2ixpbu99pX0LWGoUBBFJZmNhlBMzWGsNF1e3bg=
+  DATABASE_URL: postgresql://postgres:postgres@localhost:5432/rocco
+  SENDGRID_API_KEY: SG.1234567890
+  JWT_SECRET: f1qnL2ixpbu99pX0LWGoUBBFJZmNhlBMzWGsNF1e3bg=
+
 jobs:
   test:
     name: 🧪 Test
@@ -47,13 +55,7 @@ jobs:
 
       - name: 🧪 Unit tests
         run: npm run test
-        env:
-          APP_URL: ${{ secrets.APP_URL }}
-          COOKIE_SALT: 9yDzDu8E6JzFbbMK
-          COOKIE_SECRET: f1qnL2ixpbu99pX0LWGoUBBFJZmNhlBMzWGsNF1e3bg=
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/rocco
-          SENDGRID_API_KEY: SG.1234567890
-          JWT_SECRET: f1qnL2ixpbu99pX0LWGoUBBFJZmNhlBMzWGsNF1e3bg=
+        
       
       - name: 🧪 End-to-end tests
         # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
@@ -63,7 +65,7 @@ jobs:
           build: npm run build
           # Starts web server for E2E tests - replace with your own server invocation
           # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
-          # start: npm run dev
+          start: npm run dev
           command: npm run test:e2e:ci
           # Address to wait for before running tests
           # wait-on: 'http://localhost:5001' 
@@ -78,8 +80,9 @@ jobs:
           CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
           # Creating a token https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          
+          VITE_API_URL: http://127.0.0.1:4444
+          VITE_GOOGLE_API_KEY: ${{ secrets.VITE_GOOGLE_API_KEY }}
+
       # - name: ⬆️ Upload coverage
       #   uses: codecov/codecov-action@v3
       #   with:
