[PON-46] feat: Users can remove places from lists. (#33)
* chore: remove unused List component

* Update pull request template

* Filter place types before db create

* Refactor list scene styling and link colors

* Refactor list item styling

* Add spotlight command to package.json

* Update list scene UI

* test: fix tests

* refactor: move vitest setup to src/test

* test: add render user for e2e test

* Update deployment and test workflows

* Refactor imports and remove unused code

* Order imports in App component

* Update deploy-web-prod.yml to include main branch in push event

* fix: use itemId for delete place

--- a/.github/workflows/deploy-web-prod.yml
+++ b/.github/workflows/deploy-web-prod.yml
@@ -2,13 +2,13 @@ name: 🚀 Web > Deploy > Prod
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
     paths: ["apps/web/**", "apps/packages/**", ".github/workflows/deploy-web-prod.yml"]
   workflow_run:
     workflows: ["🔍 Code Quality"]
     types:
       - completed
+    branches: [main]
   
 jobs:
   Deploy-Production:
