--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "postinstall": "cypress install",
     "preview:test": "start-server-and-test preview http://localhost:5001",
     "preview": "vite preview",
+    "spotlight": "npx npx spotlight-sidecar",
     "start": "npx http-server build --gzip -a 0.0.0.0 -p $PORT -c 1209600",
     "test:ci": "vitest run",
     "test:coverage": "npx vite preview --outDir coverage/lcov-report",
@@ -52,6 +53,7 @@
   "devDependencies": {
     "@babel/core": "^7.22.9",
     "@testing-library/cypress": "9.0.0",
+    "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "14.0.0",
     "@types/node": "^20.4.5",
     "@types/reach__router": "^1.3.10",
@@ -99,6 +101,7 @@
     "typescript": "^5.1.6",
     "ui": "0.0.0",
     "vite": "^4.4.7",
+    "vite-tsconfig-paths": "^4.2.3",
     "vitest": "^0.33.0"
   },
   "lint-staged": {
