refactor: simplify name of code quality workflow

--- a/.github/workflows/deploy-api-prod.yaml
+++ b/.github/workflows/deploy-api-prod.yaml
@@ -2,7 +2,7 @@ name: 🚀 API > Deploy > Prod
 
 on:
   workflow_run:
-    workflows: ["🔍 Code Quality"]
+    workflows: ["code-quality"]
     branches: [main]
     types:
       - completed
