--- a/.github/workflows/deploy-web-preview.yml
+++ b/.github/workflows/deploy-web-preview.yml
@@ -6,9 +6,8 @@ on:
       - main
     paths: ["apps/web/**", "apps/packages/**", ".github/workflows/deploy-web-preview.yml"]
   workflow_run:
-    workflows: ["🔍 Code Quality"]
-    types:
-      - completed
+    workflows: ["code-quality"]
+    types: [completed]
 
 jobs:
   deploy-web-preview:
