--- a/.github/workflows/deploy-web-prod.yml
+++ b/.github/workflows/deploy-web-prod.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
     paths: ["apps/web/**", "apps/packages/**", ".github/workflows/deploy-web-prod.yml"]
   workflow_run:
-    workflows: ["🔍 Code Quality"]
+    workflows: ["code-quality"]
     types:
       - completed
     branches: [main]
