[PON-44] Users know when the login page is loading. (#34)
* Refactor component imports and add new scenes

* Refactor FormButton and Login components

* test: update tests

* new dir names

* new scene names

* Update styles in AuthNavMenu component

* Update styling and button class names in list scene

* Refactor onDeleteClick function to handle mouse event properly

* feat: replace FormButton with Button

* fix: fix Button definition in Idea form

* fix: fix deploy-web-preview workflow

* refactor: simplify name of code quality workflow

--- a/.github/workflows/deploy-web-preview.yml
+++ b/.github/workflows/deploy-web-preview.yml
@@ -1,4 +1,4 @@
-name: 🚀 Web > Deploy > Preview
+name: deploy-web-preview
 
 on:
   push:
@@ -6,13 +6,13 @@ on:
       - main
     paths: ["apps/web/**", "apps/packages/**", ".github/workflows/deploy-web-preview.yml"]
   workflow_run:
-    workflows: ["🔍 Code Quality"]
-    types:
-      - completed
+    workflows: ["code-quality"]
+    types: [completed]
 
 jobs:
-  Deploy-Preview:
+  deploy-web-preview:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v3
 
